word wrap mobile issue adjust

--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    transition: all 0.1s;
+    transition: background-color 0.6s;
 }
 
 /*******************
@@ -361,7 +361,7 @@ body {
 
 /* Output */
 .output {
-    height: min-content;
+    height: fit-content;
     min-height: 8.8rem;
     background-color: var(--Output-background);
     border-radius: 10px;
@@ -370,6 +370,8 @@ body {
     justify-content: flex-end;
     margin-top: 3.6rem;
     padding: 2.4rem;
+    word-wrap: break-word;
+    word-break: break-all;
 }
 
 .output .current-operand {
